# sahayak

./: README.md  check_app.py  interactive.py  main.py  pyproject.toml  requirements.txt  utils.py
deployment/: deploy.py
sahayak_manager/: agent.py  prompt.py
sahayak_manager/sub_agents/hyper_local_content_agent/: agent.py  prompt.py
sahayak_manager/sub_agents/knowledge_base_agent/: agent.py  prompt.py
