[project]
name = "sahayak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.3.1",
    "cloudpickle>=3.1.1",
    "google-adk>=1.8.0",
    "google-cloud-aiplatform[adk,agent-engines]>=1.105.0",
    "google-genai>=1.27.0",
    "litellm>=1.74.8",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.5",
]
